# snn

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/neunet/: definitions.rs  loader.rs  mod.rs  optimization.rs
src/neunet/api/: defs.rs  internal.rs  mod.rs
src/neunet/files/: idx.rs  mod.rs
src/neunet/graphics/: mod.rs  plotter.rs
src/neunet/transforms/: mod.rs  normalize.rs
src/neunet/utils/: binary.rs  matrix.rs  ml.rs  mod.rs  optimization.rs
