[package]
name = "nn"
version = "0.1.0"
authors = ["mariusdanciu <marius.danciu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.2"
rand_pcg = "0.2.1"
rand_distr = "0.2.2"
nalgebra = "0.19.0"
plotters = "^0.2.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

#[[bin]]
#name = "plotter"
#path = "src/neunet/graphics/plotter.rs"


